--- a/index.html
+++ b/index.html
@@ -35,14 +35,14 @@ map.on('load', function() {
         },           
         'paint': {                
             'fill-extrusion-color' : {                    
-                'property': '2016',                    
+                'property': 'diff',                    
                 "stops":[                    
                     [0, 'white'],                    
-                    [50, 'orange']                    
+                    [1, 'orange']                    
                 ]                                    
             },                
             'fill-extrusion-height' : {                    
-                'property': 'Difference',                    
+                'property': 'diff',                    
                 "stops":[                    
                     [0.2, 0],                    
                     [1, 50000]                    
