--- a/index.html
+++ b/index.html
@@ -38,11 +38,11 @@ map.on('load', function() {
                 'property': 'diff',                    
                 "stops":[                    
                     [0, 'white'],                    
-                    [1, 'orange']                    
+                    [1, 'blue']                    
                 ]                                    
             },                
             'fill-extrusion-height' : {                    
-                'property': 'diff',                    
+                'property': 'income',                    
                 "stops":[                    
                     [0.2, 0],                    
                     [1, 50000]                    
